updates to include practical session for network inference

--- a/nathalie/bibliography.bib
+++ b/nathalie/bibliography.bib
@@ -25,4 +25,33 @@
   timestamp = {2023.08.07},
 }
 
+@Article{nicolas_etal_S2012,
+  author    = {Nicolas, Pierre and M{\"a}der, Ulrike and Dervyn, Etienne and Rochat, Tatiana and Leduc, Aur{\'e}lie and Pigeonneau, Nathalie and Bidnenko, Elena and Marchadier, Elodie and Hoebeke, Mark and Aymerich, St{\'e}phane and Becher, D\"orte and Bisicchia, Paola and Botella, Eric and Delumeau, Olivier and Doherty, Geoff and Denham, Emma L. and Fogg, Mark J. and Fromion, Vincent and Goelzer, Anne and Hansen, Annette and H\"artig, Elisabeth and Harwood, Colin R. and Homuth, Georg and Jarmer, Hanne and Jules, Matthieu and Klipp, Edda and Le Chat, Ludovic and Lecointe, Fran\c{c}ois and Lewis, Peter and Liebermeister, Wolfram and March, Anika and Mars, Ruben A.T. and Nannapaneni, Priyanka and Noone, David and Pohl, Susanne and Rinn, Bernd and R\"ugheimer, Frank and Sappa, Praveen K. and Samson, Franck and Schaffer, Marc and Schwikowski, Benno and Steil, Leif and St\"ulke and Wiegert, Thomas and Devine, Kevine M. and Wilkinson, Anthony J. ad van Dijl, Jan Maarten and Hecker, Michael and V\"olker, Uwe and Bessi\`eres, Philippe and Noirot, Philippe},
+  title     = {Condition-dependent transcriptome reveals high-level regulatory architecture in {B}acillus subtilis},
+  journal   = {Science},
+  year      = {2012},
+  volume    = {335},
+  number    = {6072},
+  pages     = {1103-1106},
+  abstract  = {Bacteria adapt to environmental stimuli by adjusting their transcriptomes in a complex manner, the full potential of which has yet to be established for any individual bacterial species. Here, we report the transcriptomes of Bacillus subtilis exposed to a wide range of environmental and nutritional conditions that the organism might encounter in nature. We comprehensively mapped transcription units (TUs) and grouped 2935 promoters into regulons controlled by various RNA polymerase sigma factors, accounting for ~66% of the observed variance in transcriptional activity. This global classification of promoters and detailed description of TUs revealed that a large proportion of the detected antisense RNAs arose from potentially spurious transcription initiation by alternative sigma factors and from imperfect control of transcription termination.},
+  doi       = {10.1126/science.1206848},
+  owner     = {nathalie},
+  timestamp = {2022-09-05},
+}
+
+@Article{huynhthu_etal_PO2010,
+  author    = {Huynh-Thu, V\^an Anh. and Irrthum, Alexandre and Wehenkel, Louis and Geurts , Pierre},
+  title     = {Inferring regulatory networks from expression data using tree-based methods},
+  journal   = {PLoS ONE},
+  year      = {2010},
+  volume    = {5},
+  number    = {9},
+  pages     = {e12776},
+  abstract  = {One of the pressing open problems of computational systems biology is the elucidation of the topology of genetic regulatory networks (GRNs) using high throughput genomic data, in particular microarray gene expression data. The Dialogue for Reverse Engineering Assessments and Methods (DREAM) challenge aims to evaluate the success of GRN inference algorithms on benchmarks of simulated data. In this article, we present GENIE3, a new algorithm for the inference of GRNs that was best performer in the DREAM4 In Silico Multifactorial challenge. GENIE3 decomposes the prediction of a regulatory network between p genes into p different regression problems. In each of the regression problems, the expression pattern of one of the genes (target gene) is predicted from the expression patterns of all the other genes (input genes), using tree-based ensemble methods Random Forests or Extra-Trees. The importance of an input gene in the prediction of the target gene expression pattern is taken as an indication of a putative regulatory link. Putative regulatory links are then aggregated over all genes to provide a ranking of interactions from which the whole network is reconstructed. In addition to performing well on the DREAM4 In Silico Multifactorial challenge simulated data, we show that GENIE3 compares favorably with existing algorithms to decipher the genetic regulatory network of Escherichia coli. It doesn't make any assumption about the nature of gene regulation, can deal with combinatorial and non-linear interactions, produces directed GRNs, and is fast and scalable. In conclusion, we propose a new algorithm for GRN inference that performs well on both synthetic and real gene expression data. The algorithm, based on feature selection with tree-based ensemble methods, is simple and generic, making it adaptable to other types of genomic data and interactions},
+  doi       = {doi:10.1371/journal.pone.0012776},
+  file      = {:Graphes/graphes-inference/huynhthu_etal_PO2010.pdf:PDF},
+  owner     = {nathalie},
+  timestamp = {2013.03.13},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
