change output to github document in Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,7 @@
 ---
-output: 
-  html_document: 
-    keep_md: yes
+output: github_document
 ---
+
 # Companion repository for ECAS-SFdS 2023 school
 
 Welcome to the ECAS-SFdS 2023 school **Random forests: basics, extensions and applications**.
