add cloud solutions information

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,8 @@ Here is some tasks that we recommend you to perform before the school (the main 
    you can use the following commands to do that:
    
    ```{r, eval=FALSE}
-   install.packages(c("ggplot2", "grf", "mlbench", "randomForest", "randomForestSRC", "ranger", "reshape2", "SISIR"))
+   install.packages(c("ggplot2", "grf", "mlbench", "randomForest",
+                      "randomForestSRC", "ranger", "reshape2", "SISIR"))
    remotes::install_github("teazrq/RLT")
    ```
    
@@ -51,3 +52,11 @@ Here is some tasks that we recommend you to perform before the school (the main 
    - `pyts`
    - `session_info`
    - `sklearn`
+
+**Alternatively**, you can use cloud solutions, which prevent you from installing R or Python on your computer and can also help you resolve some installation issues:
+
+- [Posit cloud](https://posit.cloud/) for which you **need** to create a **Posit account**
+
+- [Google Colab](https://colab.research.google.com/) for which you **need** a **Google account**
+
+You may still have to install the different packages/libraries once you're logged in (depending of the type of document/project shared by the speakers).
